hphp/test/slow/parser/async_bad_tr.php.expectf

Fatal error: Encountered unexpected token 'async'. in %s/async_bad_tr.php on line 3
